# SonahAIUnrealEngineMCP

./: .gitignore  .mcp.json  CHANGELOG.md  LICENSE  README.md
Plugin/Source/UnrealMCP/: UnrealMCP.Build.cs
Plugin/Source/UnrealMCP/Private/: MCPServerRunnable.cpp  UnrealMCPBridge.cpp  UnrealMCPTaskManager.cpp
Plugin/Source/UnrealMCP/Private/Commands/: UnrealMCPAnimCommands.cpp  UnrealMCPBlueprintCommands.cpp  UnrealMCPBlueprintNodeCommands.cpp  UnrealMCPCommonUtils.cpp  UnrealMCPEditorCommands.cpp  UnrealMCPProjectCommands.cpp
Plugin/Source/UnrealMCP/Public/: UnrealMCPBridge.h  UnrealMCPTaskManager.h
Plugin/Source/UnrealMCP/Public/Commands/: UnrealMCPAnimCommands.h  UnrealMCPBlueprintCommands.h  UnrealMCPBlueprintNodeCommands.h  UnrealMCPCommonUtils.h  UnrealMCPEditorCommands.h  UnrealMCPProjectCommands.h
Python/: pyproject.toml  unreal_mcp_server.py
Python/contexts/: __init__.py  actor.md  animation.md  assets.md  blueprint.md  loader.py  replication.md  slate.md
Python/tools/: anim_tools.py  blueprint_tools.py  context_tools.py  editor_tools.py  node_tools.py  project_tools.py  task_tools.py  umg_tools.py
